k8s/client-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
